# composable-parallel-scheduler-thesis

./: CMakeLists.txt  Makefile  benchplot.py  environment.yml  perf.data  perf.data.old
benchmarks/: CMakeLists.txt  bench_lb4omp.cpp  bench_spmv_balanced.cpp  spmv.h
include/: eigen_pinner.h  eigen_pool.h  modes.h  parallel_for.h  poor_barrier.h  time_logger.h  timespan_partitioner.h  trace.h  util.h
notebooks/: scheduling.ipynb
notes/: slides.md
raw_results/mmul/: bench_mmul_EIGEN_SIMPLE.json  bench_mmul_EIGEN_STATIC.json  bench_mmul_EIGEN_TIMESPAN.json  bench_mmul_EIGEN_TIMESPAN_GRAINSIZE.json  bench_mmul_OMP_DYNAMIC_MONOTONIC.json  bench_mmul_OMP_DYNAMIC_NONMONOTONIC.json  bench_mmul_OMP_GUIDED_MONOTONIC.json  bench_mmul_OMP_GUIDED_NONMONOTONIC.json  bench_mmul_OMP_STATIC.json  bench_mmul_TBB_AFFINITY.json  bench_mmul_TBB_AUTO.json  bench_mmul_TBB_CONST_AFFINITY.json  bench_mmul_TBB_SIMPLE.json
raw_results/mtranspose/: bench_mtranspose_EIGEN_SIMPLE.json  bench_mtranspose_EIGEN_STATIC.json  bench_mtranspose_EIGEN_TIMESPAN.json  bench_mtranspose_EIGEN_TIMESPAN_GRAINSIZE.json  (+9 more)
scheduling_dist/: CMakeLists.txt  scheduling_dist.cpp
scheduling_time/: CMakeLists.txt  bench_scheduling.cpp
tbb_overhead_task_size/: CMakeLists.txt  main.cpp  plot_example.py  run.sh
tbb_overhead_task_size/results/: tbb_overhead_task_size_100.json  tbb_overhead_task_size_1000.json  tbb_overhead_task_size_10000.json  tbb_overhead_task_size_100000.json  tbb_overhead_task_size_1000000.json  tbb_overhead_task_size_10000000.json  tbb_overhead_task_size_100000000.json
(+169 files in other folders)
